# ElasticSearchClient

./: .clang-format  ElasticSearchClient.cc  ElasticSearchClient.h  IndicesClient.cc  IndicesClient.h  README.md
src/: Aggregation.h  DocumentsClient.cc  DocumentsClient.h  ElasticSearchClient.cc  ElasticSearchClient.h  ElasticSearchException.h  HttpClient.cc  HttpClient.h  IndicesClient.cc  IndicesClient.h  Property.h  Query.h
test/: .gitignore  CMakeLists.txt  config.yaml  main.cc  make_all.fish
test/unittests/: DocumentsClientTest.h  ElasticSearchExceptionTest.h  HttpClientTest.h  IndicesClientTest.h  PropertyTest.h  SearchTest.h  testdata.json
